2008-10-24  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
	fixed issue in generic type lookup.

2008-10-23  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs: Name of
	project in project references may contain some other info. Strip it.

2008-10-23  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProject.cs:
	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs: When
	loading a configuration, look for other configurations with the same
	name but with no platform specified. The properties must be merged
	when loading, and unmerged when saving.

2008-10-22  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs:
	Deserialise Generator too.

2008-10-22  Michael Hutchinson  <mhutchinson@novell.com>

	* md1format.xml:
	* MonoDevelop.Projects/ProjectFile.cs:
	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs: Added
	Generator property. Fixed Silverlight version mapping.

2008-10-22  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs: Added protection
	against database collection changes while iterating to update
	references.

2008-10-22  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Formats.MSBuild/SlnFileFormat.cs: Improve warning
	message.

2008-10-22  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs: If
	there isn't a common assembly name for all configurations, make sure
	the common name property is removed. Fixes bug Bug 433511 - project
	configurations are not preserved.

2008-10-22  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomType.cs:
	* MonoDevelop.Projects.Dom/DomReturnType.cs: Worked on instantiated
	types.

2008-10-22  Mike Krüger  <mkrueger@novell.com>
